# pyLiteracy

./: .gitignore  LICENSE.md  README.md  pyLiteracy.py  pyproject.toml
Corpus/purged/: loc_zai_purged.txt
Gua_Zai_12.15/: Gua_Zai.py  loc_zai_purged.json  utteranceChecker.py
Gua_Zai_12.15/intent/: Loki_Zai_Aspect.py  Loki_Zai_Loc.py  Loki_Zai_Range.py  Loki_Zai_State.py  Loki_Zai_verbP.py  USER_DEFINED.json
Gua_Zai_12.15/ref/: Zai_Aspect.ref  Zai_Loc.ref  Zai_Range.ref  Zai_State.ref  Zai_verbP.ref
Loki/: Discord_bot_pyLiteracy.py  UI_main.py  naive_typo.py
Loki/Gua_Zai/: Gua_Zai.py  log file.txt  missing_zai_0-300_revised.json  missing_zai_0-5000.json  missing_zai_1-300_revised.json  missing_zai_1301-2300_revised.json  missing_zai_201-300.json  missing_zai_2301-3301_revised.json  missing_zai_3301-4301.json  utteranceChecker.py
Loki/Gua_Zai (1230)/: Gua_Zai.py  loc_zai_purged.json  missing_zai.json  missing_zai_301-1300_revised.json
Loki/Gua_zai/: Gua_zai.py  account.info  missing_zai.json  missing_zai_0-300_revised.json  missing_zai_1-300_revised.json  missing_zai_100-200.json  utteranceChecker.py
Loki/result log files/: log file.txt  (+2 more)
corpus/: LokiUserList.txt  re-ws-在-01.txt
pyLiteracy/: demo.py  pyLiteracy.py
ref/: Zai_Aspect.ref  Zai_Loc.ref  Zai_QMarker.ref  Zai_Range.ref  Zai_State.ref  Zai_idiom.ref  Zai_verbP.ref  verbP_zai.ref
result log files/: missing_zai_1301-2300_revised.json  missing_zai_3301-4301.json
tool src/: USER_DEFINED.json  text_tool.py
toolbox/: LokiTool.md  LokiTool.py  account.info  corpus_pos.py  text_tool.py
(+97 files in other folders)
