[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLiteracy"
version = "0.0.1"
authors = [
  { name="Chenct-jonathan", email="chenjonathan901210@gmail.com" },
]
description = "A Linguistic-Based Mandarin Grammar Checker"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Chenct-jonathan/pyLiteracy"
"Bug Tracker" = "https://github.com/Chenct-jonathan/pyLiteracy/issues"